road detection algo with assets

--- a/road-detection-algo.ipynb
+++ b/road-detection-algo.ipynb
@@ -55,50 +55,41 @@
     "# Load the Google Maps screenshot\n",
     "image = cv2.imread(\"./road.png\")\n",
     "\n",
-    "# detect level 4 roads of yellowish color and display them in white color\n",
+    "# detect highway roads of yellowish color and display them in white color\n",
     "yellow = np.uint8([[[255,255,0 ]]])\n",
     "hsv_yellow = cv2.cvtColor(yellow,cv2.COLOR_BGR2HSV)\n",
     "lower_yellow = np.array([hsv_yellow[0][0][0]+55,100,100])\n",
     "upper_yellow = np.array([hsv_yellow[0][0][0]+60,255,255])\n",
     "mask = cv2.inRange(image, lower_yellow, upper_yellow)\n",
     "res = cv2.bitwise_and(image,image, mask=mask)\n",
+    "res_gray = cv2.cvtColor(res, cv2.COLOR_BGR2GRAY)  # convert to binary image\n",
+    "# using the res_gray image, replace the yellowish color with white color\n",
+    "image[res_gray>0] = (255,255,255)\n",
     "\n",
-    "# convert to binary image\n",
-    "gray = cv2.cvtColor(res, cv2.COLOR_BGR2GRAY)\n",
-    "\n",
-    "# using the res image, replace the yellowish color with white color\n",
-    "image[gray>0] = (255,255,255)\n",
-    "\n",
-    "# convert to binary image\n",
+    "# Threshold the image to get the roads(ROI) apart from non-white areas (like water bodies and other non-road areas)\n",
     "gray = cv2.cvtColor(image, cv2.COLOR_BGR2GRAY)\n",
-    "#make it single channel\n",
-    "gray = gray[:,:,np.newaxis]\n",
-    "# display the image\n",
-    "plt.imshow(gray)\n",
-    "\n",
-    "# Detect all the roads of white-ish color by using binary thresholding\n",
     "ret,thresh = cv2.threshold(gray,250,255,cv2.THRESH_BINARY)\n",
     "\n",
     "# display the image\n",
     "plt.imshow(thresh)\n",
     "\n",
-    "# find the contours of the roads and make the contours white\n",
-    "contours, hierarchy = cv2.findContours(thresh, cv2.RETR_TREE, cv2.CHAIN_APPROX_SIMPLE)\n",
-    "cv2.drawContours(thresh, contours, -1, (255,255,255), 3)\n",
+    "# # find the contours of the roads and make the contours white\n",
+    "# contours, hierarchy = cv2.findContours(thresh, cv2.RETR_TREE, cv2.CHAIN_APPROX_SIMPLE)\n",
+    "# cv2.drawContours(thresh, contours, -1, (255,255,255), 3)\n",
     "\n",
     "# display the image\n",
-    "plt.imshow(thresh)\n",
+    "# plt.imshow(thresh)\n",
     "\n",
-    "#remove all the dots noise\n",
-    "kernel = np.ones((2,2),np.uint8)\n",
-    "thresh = cv2.erode(thresh,kernel,iterations = 2)\n",
+    "# #remove all the dots noise\n",
+    "# kernel = np.ones((2,2),np.uint8)\n",
+    "# thresh = cv2.erode(thresh,kernel,iterations = 2)\n",
     "\n",
-    "plt.imshow(thresh, cmap='gray')\n",
+    "# plt.imshow(thresh, cmap='gray')\n",
     "\n",
     "# remove not long enough lines (dots of small area)\n",
     "contours, hierarchy = cv2.findContours(thresh, cv2.RETR_TREE, cv2.CHAIN_APPROX_SIMPLE)\n",
     "for cnt in contours:\n",
-    "    if cv2.contourArea(cnt) < 100:\n",
+    "    if cv2.contourArea(cnt) < 10:\n",
     "        cv2.drawContours(thresh, [cnt], 0, (0,0,0), -1)\n",
     "\n",
     "# display the image\n",
@@ -123,7 +114,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.8"
+   "version": "3.10.8 (main, Oct 11 2022, 11:35:05) [GCC 11.2.0]"
   },
   "orig_nbformat": 4,
   "vscode": {
