--- a/algo.ipynb
+++ b/algo.ipynb
@@ -145,7 +145,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.8"
+   "version": "3.10.8 (main, Oct 11 2022, 11:35:05) [GCC 11.2.0]"
   },
   "orig_nbformat": 4,
   "vscode": {
