--- a/preprocess-algo.ipynb
+++ b/preprocess-algo.ipynb
@@ -49,9 +49,6 @@
     "gray = cv2.cvtColor(image, cv2.COLOR_BGR2GRAY)\n",
     "ret,thresh = cv2.threshold(gray,250,255,cv2.THRESH_BINARY)\n",
     "\n",
-    "# display the image\n",
-    "plt.imshow(thresh, cmap='gray')\n",
-    "\n",
     "# remove not long enough lines (dots of small area)\n",
     "contours, hierarchy = cv2.findContours(thresh, cv2.RETR_TREE, cv2.CHAIN_APPROX_SIMPLE)\n",
     "for cnt in contours:\n",
@@ -61,15 +58,25 @@
     "# save the grey image\n",
     "cv2.imwrite('road_grey.png', thresh)\n",
     "\n",
-    "# make the lines thicker\n",
-    "kernel = np.ones((6,6),np.uint8)\n",
+    "# make the lines thicker to remove line breaks\n",
+    "kernel = np.ones((2,2),np.uint8)\n",
     "dilation = cv2.dilate(thresh,kernel,iterations = 1)\n",
     "\n",
-    "# display the image\n",
-    "plt.imshow(dilation, cmap='gray')\n",
+    "# convert binart to rgb\n",
+    "dilation = cv2.cvtColor(dilation, cv2.COLOR_GRAY2RGB)\n",
     "\n",
-    "# save the grey dilated image\n",
-    "cv2.imwrite('road_dil_grey.png', dilation)"
+    "# display and save the grey dilated image\n",
+    "# plt.imshow(dilation, cmap='gray')\n",
+    "cv2.imwrite('road_dil_grey.png', dilation)\n",
+    "\n",
+    "# # reduce thickness of the lines\n",
+    "# kernel = np.ones((3,3),np.uint8)\n",
+    "# erosion = cv2.erode(dilation,kernel,iterations = 1)\n",
+    "# save display the grey eroded image\n",
+    "# plt.imshow(erosion, cmap='gray')\n",
+    "# cv2.imwrite('road_dil_grey.png', erosion)\n",
+    "#draw a dot of blue color on the center of the image with a radius of 10 pixels\n",
+    "# cv2.circle(dilation, (int(dilation.shape[1]/1.5), int(dilation.shape[0]/2.7)), 2, (255,0,0), -1)"
    ]
   }
  ],
