road detection algo improvements

--- a/.research/nefi-implemetaion.ipynb
+++ b/.research/nefi-implemetaion.ipynb
@@ -12,20 +12,11 @@
     "import cv_algorithms\n",
     "import operator\n",
     "\n",
-    "binary_image = cv2.imread(\"road_dil_grey.png\", 0)\n",
+    "imgBin = cv2.imread(\"road_dil_bin.png\", cv2.IMREAD_GRAYSCALE)\n",
     "\n",
-    "img = cv2.imread(\"road_dil_grey.png\")\n",
-    "# Convert to grayscale\n",
-    "imgGray = cv2.cvtColor(img, cv2.COLOR_BGR2GRAY)\n",
-    "\n",
-    "# Thinning needs binary images (i.e. black/white, no gray!)\n",
-    "# 180 is a hand-tuned threshold for the example image.\n",
-    "# The WHITE parts will be trimmed, so depending on the image, you have to use\n",
-    "#  either cv2.THRESH_BINARY or cv2.THRESH_BINARY_INV\n",
-    "imgThresh = cv2.threshold(imgGray, 180, 255, cv2.THRESH_BINARY)[1]\n",
     "\n",
     "# Perform thinning out-of-place\n",
-    "guoHallThinning = cv_algorithms.guo_hall(imgThresh)\n",
+    "guoHallThinning = cv_algorithms.guo_hall(imgBin)\n",
     "# ... or allow the library to modify the original image (= faster):\n",
     "# cv_algorithms.guo_hall(imgThresh, inplace=True)\n",
     "\n",
@@ -355,7 +346,16 @@
     "\n",
     "\n",
     "skeleton = cv2.imread(\"skeletonized_roadmap.png\", cv2.IMREAD_GRAYSCALE)\n",
+    "\n",
+    "# add padding to get nodes from the image borders which start from white\n",
+    "skeleton = cv2.copyMakeBorder(\n",
+    "    skeleton, 10, 10, 10, 10, cv2.BORDER_CONSTANT, value=[0, 0, 0])\n",
     "image = cv2.imread(\"road_dil_grey.png\", cv2.IMREAD_GRAYSCALE)\n",
+    "\n",
+    "# add padding to get nodes from the image borders which start from white\n",
+    "image = cv2.copyMakeBorder(image, 10, 10, 10, 10,\n",
+    "                           cv2.BORDER_CONSTANT, value=[0, 0, 0])\n",
+    "\n",
     "# detect nodes\n",
     "graph = zhang_suen_node_detection(skeleton)\n",
     "# detect edges\n",
@@ -388,7 +388,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.9 (main, Dec  6 2022, 18:44:57) [GCC 11.3.0]"
+   "version": "3.10.9"
   },
   "orig_nbformat": 4,
   "vscode": {
