--- a/.research/preprocess-algo.ipynb
+++ b/.research/preprocess-algo.ipynb
@@ -12,7 +12,7 @@
     "import matplotlib.pyplot as plt\n",
     "\n",
     "# Load the Google Maps screenshot\n",
-    "image = cv2.imread(\"./road.png\")\n",
+    "image = cv2.imread(\"./rad.png\")\n",
     "\n",
     "# detect highway roads of yellowish color and display them in white color\n",
     "yellow = np.uint8([[[255,255,0 ]]])\n",
@@ -20,34 +20,35 @@
     "lower_yellow = np.array([hsv_yellow[0][0][0]+55,100,100])\n",
     "upper_yellow = np.array([hsv_yellow[0][0][0]+60,255,255])\n",
     "mask = cv2.inRange(image, lower_yellow, upper_yellow)\n",
-    "res = cv2.bitwise_and(image,image, mask=mask)\n",
-    "res_gray = cv2.cvtColor(res, cv2.COLOR_BGR2GRAY)  # convert to binary image\n",
-    "# using the res_gray image, replace the yellowish color with white color\n",
-    "image[res_gray>0] = (255,255,255)\n",
-    "\n",
-    "# Threshold the image to get the roads(ROI) apart from non-white areas (like water bodies and other non-road areas)\n",
-    "gray = cv2.cvtColor(image, cv2.COLOR_BGR2GRAY)\n",
-    "ret,thresh = cv2.threshold(gray,250,255,cv2.THRESH_BINARY)\n",
+    "cv2.imwrite('impure-mask.png', mask)\n",
     "\n",
     "# remove not long enough lines (dots of small area)\n",
-    "contours, hierarchy = cv2.findContours(thresh, cv2.RETR_TREE, cv2.CHAIN_APPROX_SIMPLE)\n",
+    "contours, hierarchy = cv2.findContours(\n",
+    "    mask, cv2.RETR_TREE, cv2.CHAIN_APPROX_SIMPLE)\n",
     "for cnt in contours:\n",
     "    if cv2.contourArea(cnt) < 5:\n",
-    "        cv2.drawContours(thresh, [cnt], 0, (0,0,0), -1)\n",
+    "        cv2.drawContours(mask, [cnt], 0, (0, 0, 0), -1)\n",
+    "cv2.imwrite('mask.png', mask)\n",
+    "\n",
+    "# using the res_gray image, replace the yellowish color with white color\n",
+    "image[mask > 0] = (255, 255, 255)\n",
+    "cv2.imwrite('detect_yellow.png', image)\n",
+    "# Threshold the image to get the roads(ROI) apart from non-white areas (like water bodies and other non-road areas)\n",
+    "gray = cv2.cvtColor(image, cv2.COLOR_BGR2GRAY)\n",
+    "cv2.imwrite('road_grey.png', gray)\n",
+    "ret,thresh = cv2.threshold(gray,250,255,cv2.THRESH_BINARY)\n",
+    "\n",
     "\n",
     "# save the grey image\n",
-    "cv2.imwrite('road_grey.png', thresh)\n",
+    "cv2.imwrite('road_bin.png', thresh)\n",
     "\n",
     "# make the lines thicker to remove line breaks\n",
     "kernel = np.ones((2,2),np.uint8)\n",
     "dilation = cv2.dilate(thresh,kernel,iterations = 1)\n",
     "\n",
-    "# convert binart to rgb\n",
-    "dilation = cv2.cvtColor(dilation, cv2.COLOR_GRAY2RGB)\n",
-    "\n",
     "# display and save the grey dilated image\n",
     "# plt.imshow(dilation, cmap='gray')\n",
-    "cv2.imwrite('road_dil_grey.png', dilation)\n",
+    "cv2.imwrite('road_dil_bin.png', dilation)\n",
     "\n",
     "# # reduce thickness of the lines\n",
     "# kernel = np.ones((3,3),np.uint8)\n",
@@ -76,7 +77,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.9 (main, Dec  6 2022, 18:44:57) [GCC 11.3.0]"
+   "version": "3.10.9"
   },
   "orig_nbformat": 4,
   "vscode": {
