minor ipynb changes

--- a/.research/preprocess-algo.ipynb
+++ b/.research/preprocess-algo.ipynb
@@ -12,7 +12,7 @@
     "import matplotlib.pyplot as plt\n",
     "\n",
     "# Load the Google Maps screenshot\n",
-    "image = cv2.imread(\"./rad.png\")\n",
+    "image = cv2.imread(\"./0-rad.png\")\n",
     "\n",
     "# detect highway roads of yellowish color and display them in white color\n",
     "yellow = np.uint8([[[255,255,0 ]]])\n",
@@ -20,7 +20,7 @@
     "lower_yellow = np.array([hsv_yellow[0][0][0]+55,100,100])\n",
     "upper_yellow = np.array([hsv_yellow[0][0][0]+60,255,255])\n",
     "mask = cv2.inRange(image, lower_yellow, upper_yellow)\n",
-    "cv2.imwrite('impure-mask.png', mask)\n",
+    "cv2.imwrite('1-impure-mask.png', mask)\n",
     "\n",
     "# remove not long enough lines (dots of small area)\n",
     "contours, hierarchy = cv2.findContours(\n",
@@ -28,19 +28,19 @@
     "for cnt in contours:\n",
     "    if cv2.contourArea(cnt) < 5:\n",
     "        cv2.drawContours(mask, [cnt], 0, (0, 0, 0), -1)\n",
-    "cv2.imwrite('mask.png', mask)\n",
+    "cv2.imwrite('1.1-mask.png', mask)\n",
     "\n",
     "# using the res_gray image, replace the yellowish color with white color\n",
     "image[mask > 0] = (255, 255, 255)\n",
-    "cv2.imwrite('detect_yellow.png', image)\n",
+    "cv2.imwrite('1.2-detect_yellow.png', image)\n",
     "# Threshold the image to get the roads(ROI) apart from non-white areas (like water bodies and other non-road areas)\n",
     "gray = cv2.cvtColor(image, cv2.COLOR_BGR2GRAY)\n",
-    "cv2.imwrite('road_grey.png', gray)\n",
+    "cv2.imwrite('2.1-road_grey.png', gray)\n",
     "ret,thresh = cv2.threshold(gray,250,255,cv2.THRESH_BINARY)\n",
     "\n",
     "\n",
     "# save the grey image\n",
-    "cv2.imwrite('road_bin.png', thresh)\n",
+    "cv2.imwrite('2.2-road_bin.png', thresh)\n",
     "\n",
     "# make the lines thicker to remove line breaks\n",
     "kernel = np.ones((2,2),np.uint8)\n",
@@ -48,7 +48,7 @@
     "\n",
     "# display and save the grey dilated image\n",
     "# plt.imshow(dilation, cmap='gray')\n",
-    "cv2.imwrite('road_dil_bin.png', dilation)\n",
+    "cv2.imwrite('2.3-road_dil_bin.png', dilation)\n",
     "\n",
     "# # reduce thickness of the lines\n",
     "# kernel = np.ones((3,3),np.uint8)\n",
@@ -68,21 +68,13 @@
    "name": "python3"
   },
   "language_info": {
-   "codemirror_mode": {
-    "name": "ipython",
-    "version": 3
-   },
-   "file_extension": ".py",
-   "mimetype": "text/x-python",
    "name": "python",
-   "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython3",
-   "version": "3.10.9"
+   "version": "3.10.6"
   },
   "orig_nbformat": 4,
   "vscode": {
    "interpreter": {
-    "hash": "7d6993cb2f9ce9a59d5d7380609d9cb5192a9dedd2735a011418ad9e827eb538"
+    "hash": "31f2aee4e71d21fbe5cf8b01ff0e069b9275f58929596ceb00d14d90e3e16cd6"
    }
   }
  },
