--- a/.research/nefi-implemetaion.ipynb
+++ b/.research/nefi-implemetaion.ipynb
@@ -12,7 +12,7 @@
     "import cv_algorithms\n",
     "import operator\n",
     "\n",
-    "imgBin = cv2.imread(\"road_dil_bin.png\", cv2.IMREAD_GRAYSCALE)\n",
+    "imgBin = cv2.imread(\"2.3-road_dil_bin.png\", cv2.IMREAD_GRAYSCALE)\n",
     "\n",
     "\n",
     "# Perform thinning out-of-place\n",
@@ -20,7 +20,7 @@
     "# ... or allow the library to modify the original image (= faster):\n",
     "# cv_algorithms.guo_hall(imgThresh, inplace=True)\n",
     "\n",
-    "cv2.imwrite(\"skeletonized_roadmap.png\", guoHallThinning)\n"
+    "cv2.imwrite(\"3-skeletonized_roadmap.png\", guoHallThinning)\n"
    ]
   },
   {
@@ -345,14 +345,12 @@
    "source": [
     "\n",
     "\n",
-    "skeleton = cv2.imread(\"skeletonized_roadmap.png\", cv2.IMREAD_GRAYSCALE)\n",
-    "\n",
+    "skeleton = cv2.imread(\"3-skeletonized_roadmap.png\", cv2.IMREAD_GRAYSCALE)\n",
     "# add padding to get nodes from the image borders which start from white\n",
+    "image = cv2.imread(\"2.3-road_dil_bin.png\", cv2.IMREAD_GRAYSCALE)\n",
+    "\n",
     "skeleton = cv2.copyMakeBorder(\n",
     "    skeleton, 10, 10, 10, 10, cv2.BORDER_CONSTANT, value=[0, 0, 0])\n",
-    "image = cv2.imread(\"road_dil_grey.png\", cv2.IMREAD_GRAYSCALE)\n",
-    "\n",
-    "# add padding to get nodes from the image borders which start from white\n",
     "image = cv2.copyMakeBorder(image, 10, 10, 10, 10,\n",
     "                           cv2.BORDER_CONSTANT, value=[0, 0, 0])\n",
     "\n",
@@ -374,21 +372,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
-  },
-  "language_info": {
-   "codemirror_mode": {
-    "name": "ipython",
-    "version": 3
-   },
-   "file_extension": ".py",
-   "mimetype": "text/x-python",
-   "name": "python",
-   "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython3",
-   "version": "3.10.9"
   },
   "orig_nbformat": 4,
   "vscode": {
