highway color detection improvements

--- a/.research/preprocess-algo.ipynb
+++ b/.research/preprocess-algo.ipynb
@@ -2,9 +2,20 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 103,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 103,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# Import the necessary libraries\n",
     "import cv2\n",
@@ -14,16 +25,17 @@
     "# Load the Google Maps screenshot\n",
     "image = cv2.imread(\"./0-rad.png\")\n",
     "\n",
+    "# detect highway roads of #FDE293 i.e 253, 226, 147 \n",
     "# detect highway roads of yellowish color and display them in white color\n",
-    "yellow = np.uint8([[[255,255,0 ]]])\n",
+    "yellow = np.uint8([[[253,226,147 ]]])\n",
     "hsv_yellow = cv2.cvtColor(yellow,cv2.COLOR_BGR2HSV)\n",
-    "lower_yellow = np.array([hsv_yellow[0][0][0]+55,100,100])\n",
-    "upper_yellow = np.array([hsv_yellow[0][0][0]+60,255,255])\n",
+    "lower_yellow = np.array([hsv_yellow[0][0][0]+25,0,0])\n",
+    "upper_yellow = np.array([hsv_yellow[0][0][0]+50,255,255])\n",
     "mask = cv2.inRange(image, lower_yellow, upper_yellow)\n",
     "cv2.imwrite('1-impure-mask.png', mask)\n",
     "\n",
     "# remove not long enough lines (dots of small area)\n",
-    "contours, hierarchy = cv2.findContours(\n",
+    "contours, _ = cv2.findContours(\n",
     "    mask, cv2.RETR_TREE, cv2.CHAIN_APPROX_SIMPLE)\n",
     "for cnt in contours:\n",
     "    if cv2.contourArea(cnt) < 5:\n",
