--- a/.research/nefi-implemetaion.ipynb
+++ b/.research/nefi-implemetaion.ipynb
@@ -4,7 +4,17 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31mFailed to start the Kernel. \n",
+      "\u001b[1;31mView Jupyter <a href='command:jupyter.viewOutput'>log</a> for further details."
+     ]
+    }
+   ],
    "source": [
     "import numpy as np\n",
     "import matplotlib.pyplot as plt\n",
@@ -38,6 +48,7 @@
     "import numpy\n",
     "from collections import defaultdict\n",
     "from itertools import chain\n",
+    "\n",
     "\n",
     "def zhang_suen_node_detection(skel):\n",
     "    \"\"\"\n",
@@ -107,6 +118,7 @@
     "            if item(x, y) != 0 and check_pixel_neighborhood(x, y, skel):\n",
     "                graph.add_node((x, y))\n",
     "    return graph\n",
+    "\n",
     "\n",
     "def breadth_first_edge_detection(skel, segmented, graph):\n",
     "    \"\"\"\n",
@@ -372,14 +384,18 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "venv",
    "language": "python",
    "name": "python3"
+  },
+  "language_info": {
+   "name": "python",
+   "version": "3.10.6"
   },
   "orig_nbformat": 4,
   "vscode": {
    "interpreter": {
-    "hash": "7d6993cb2f9ce9a59d5d7380609d9cb5192a9dedd2735a011418ad9e827eb538"
+    "hash": "d5bc7a82b7107bba0e1247fcf93b2343ad09b1fd405508b8c20fc4e3ae4170a8"
    }
   }
  },
