simplified highlway color detection (hsv impl)

--- a/.research/preprocess-algo.ipynb
+++ b/.research/preprocess-algo.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 103,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [
     {
@@ -11,7 +11,7 @@
        "True"
       ]
      },
-     "execution_count": 103,
+     "execution_count": 34,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -25,13 +25,12 @@
     "# Load the Google Maps screenshot\n",
     "image = cv2.imread(\"./0-rad.png\")\n",
     "\n",
-    "# detect highway roads of #FDE293 i.e 253, 226, 147 \n",
-    "# detect highway roads of yellowish color and display them in white color\n",
-    "yellow = np.uint8([[[253,226,147 ]]])\n",
-    "hsv_yellow = cv2.cvtColor(yellow,cv2.COLOR_BGR2HSV)\n",
-    "lower_yellow = np.array([hsv_yellow[0][0][0]+25,0,0])\n",
-    "upper_yellow = np.array([hsv_yellow[0][0][0]+50,255,255])\n",
-    "mask = cv2.inRange(image, lower_yellow, upper_yellow)\n",
+    "# detect highway roads and display them in white color\n",
+    "# take a HSV color space\n",
+    "lower_color = np.array([146, 200, 200])\n",
+    "upper_color = np.array([147, 255,255])\n",
+    "\n",
+    "mask = cv2.inRange(image, lower_color, upper_color)\n",
     "cv2.imwrite('1-impure-mask.png', mask)\n",
     "\n",
     "# remove not long enough lines (dots of small area)\n",
