minor improvements in algo

--- a/.research-dump/nefi-implemetaion.ipynb
+++ b/.research-dump/nefi-implemetaion.ipynb
@@ -2,25 +2,24 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
-     "ename": "",
-     "evalue": "",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31mFailed to start the Kernel. \n",
-      "\u001b[1;31mView Jupyter <a href='command:jupyter.viewOutput'>log</a> for further details."
-     ]
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
-    "import numpy as np\n",
     "import matplotlib.pyplot as plt\n",
     "import cv2\n",
     "import cv_algorithms\n",
-    "import operator\n",
     "\n",
     "imgBin = cv2.imread(\"2.3-road_dil_bin.png\", cv2.IMREAD_GRAYSCALE)\n",
     "\n",
@@ -35,16 +34,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
     "import cv2\n",
     "import networkx as nx\n",
     "import numpy as np\n",
-    "import thinning\n",
-    "import sys\n",
-    "import traceback\n",
     "import numpy\n",
     "from collections import defaultdict\n",
     "from itertools import chain\n",
@@ -216,18 +212,20 @@
     "                       length=label_length[l1] + label_length[l2],\n",
     "                       width=np.mean(diam),\n",
     "                       width_var=np.var(diam))\n",
-    "    return graph\n"
+    "    return graph\n",
+    "\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
     "NODESIZESCALING = 750\n",
     "EDGETRANSPARENCYDIVIDER = 5\n",
     "EDGETRANSPARENCY = False\n",
+    "\n",
     "\n",
     "def find_max_edge_deviation(graph):\n",
     "    \"\"\"\n",
@@ -351,9 +349,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "\n",
     "\n",
@@ -389,13 +398,21 @@
    "name": "python3"
   },
   "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
    "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
    "version": "3.10.6"
   },
   "orig_nbformat": 4,
   "vscode": {
    "interpreter": {
-    "hash": "d5bc7a82b7107bba0e1247fcf93b2343ad09b1fd405508b8c20fc4e3ae4170a8"
+    "hash": "bd870ee75ad554e3151c0ff74d4e89df5fcef52ca707308ab77f4da0c951860e"
    }
   }
  },
