--- a/.research-dump/preprocess-algo.ipynb
+++ b/.research-dump/preprocess-algo.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -11,7 +11,7 @@
        "True"
       ]
      },
-     "execution_count": 34,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -23,7 +23,7 @@
     "import matplotlib.pyplot as plt\n",
     "\n",
     "# Load the Google Maps screenshot\n",
-    "image = cv2.imread(\"./0-rad.png\")\n",
+    "image = cv2.imread(\"./0-road.png\")\n",
     "\n",
     "# detect highway roads and display them in white color\n",
     "# take a HSV color space\n",
@@ -74,18 +74,26 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "venv",
    "language": "python",
    "name": "python3"
   },
   "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
    "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
    "version": "3.10.6"
   },
   "orig_nbformat": 4,
   "vscode": {
    "interpreter": {
-    "hash": "31f2aee4e71d21fbe5cf8b01ff0e069b9275f58929596ceb00d14d90e3e16cd6"
+    "hash": "bd870ee75ad554e3151c0ff74d4e89df5fcef52ca707308ab77f4da0c951860e"
    }
   }
  },
