--- a/.research-dump/nefi-implemetaion.ipynb
+++ b/.research-dump/nefi-implemetaion.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -11,7 +11,7 @@
        "True"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -23,18 +23,24 @@
     "\n",
     "imgBin = cv2.imread(\"2.3-road_dil_bin.png\", cv2.IMREAD_GRAYSCALE)\n",
     "\n",
+    "# Add padding to the image. This is necessary because on borders of the image the thick lines touching the border will not be thinned. The padding should be done.\n",
+    "padded = cv2.copyMakeBorder(\n",
+    "    imgBin, 1, 1, 1, 1, cv2.BORDER_CONSTANT, value=[0, 0, 0])\n",
     "\n",
     "# Perform thinning out-of-place\n",
-    "guoHallThinning = cv_algorithms.guo_hall(imgBin)\n",
+    "guoHallThinning = cv_algorithms.zhang_suen(padded)\n",
     "# ... or allow the library to modify the original image (= faster):\n",
     "# cv_algorithms.guo_hall(imgThresh, inplace=True)\n",
+    "\n",
+    "# remove padding\n",
+    "# guoHallThinning = guoHallThinning[10:-10, 10:-10]\n",
     "\n",
     "cv2.imwrite(\"3-skeletonized_roadmap.png\", guoHallThinning)\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -131,13 +137,12 @@
     "    The runtime is linear in the number of pixels.\n",
     "    White pixels are **much more** expensive though.\n",
     "    \"\"\"\n",
-    "    def neighbors(x, y):\n",
+    "    def neighbors(x, y, label):\n",
     "        item = skel.item\n",
+    "        print(label, item(x, y))\n",
     "        width, height = skel.shape\n",
     "        for dy in [-1, 0, 1]:\n",
     "            for dx in [-1, 0, 1]:\n",
-    "                # the line below is ugly and is intended to be this way\n",
-    "                # do not try to modify it unless you know what you're doing\n",
     "                if (dx != 0 or dy != 0) and \\\n",
     "                        0 <= x + dx < width and \\\n",
     "                        0 <= y + dy < height and \\\n",
@@ -165,14 +170,15 @@
     "    queues = []\n",
     "    label = 1\n",
     "    label_length = defaultdict(int)\n",
+    "    print(graph.nodes())\n",
     "    for x, y in graph.nodes():\n",
-    "        for a, b in neighbors(x, y):\n",
+    "        for a, b in neighbors(x, y, label):\n",
     "            label_node[label] = (x, y)\n",
-    "            label_length[label] = 1.414214 if abs(x - a) == 1 and \\\n",
-    "                abs(y - b) == 1 else 1\n",
+    "            label_length[label] = 1.414214 if abs(x - a) == 1 and abs(y - b) == 1 \\\n",
+    "                else 1\n",
     "            queues.append((label, (x, y), [(a, b)]))\n",
     "            label += 1\n",
-    "\n",
+    "    print(queues)\n",
     "    # bfs over the white pixels.\n",
     "    # One phase: every entry in queues is handled\n",
     "    # Each label grows in every phase.\n",
@@ -194,7 +200,8 @@
     "                    # TODO consider using cv2.arcLength for this\n",
     "                    label_length[label] += 1.414214 if abs(ix - px) == 1 and \\\n",
     "                        abs(iy - py) == 1 else 1\n",
-    "                    new_queues.append((label, (ix, iy), neighbors(ix, iy)))\n",
+    "                    new_queues.append(\n",
+    "                        (label, (ix, iy), neighbors(ix, iy, label)))\n",
     "                elif value != label:\n",
     "                    edges.add((min(label, value), max(label, value)))\n",
     "        queues = new_queues\n",
@@ -212,13 +219,12 @@
     "                       length=label_length[l1] + label_length[l2],\n",
     "                       width=np.mean(diam),\n",
     "                       width_var=np.var(diam))\n",
-    "    return graph\n",
-    "\n"
+    "    return graph\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -349,45 +355,86 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[(14, 22), (17, 16), (18, 26), (20, 12)]\n",
+      "1 255\n",
+      "5 255\n",
+      "8 255\n",
+      "9 255\n",
+      "[(1, (14, 22), [(15, 21)]), (2, (14, 22), [(13, 22)]), (3, (14, 22), [(15, 22)]), (4, (14, 22), [(14, 23)]), (5, (17, 16), [(16, 16)]), (6, (17, 16), [(18, 16)]), (7, (17, 16), [(17, 17)]), (8, (18, 26), [(17, 25)]), (9, (20, 12), [(20, 13)])]\n",
+      "1 255\n",
+      "2 255\n",
+      "3 255\n",
+      "4 255\n",
+      "5 255\n",
+      "6 255\n",
+      "7 255\n",
+      "8 255\n",
+      "9 255\n",
+      "1 255\n",
+      "1 255\n",
+      "1 255\n",
+      "2 255\n",
+      "4 255\n",
+      "5 255\n",
+      "5 255\n",
+      "6 255\n",
+      "7 255\n",
+      "8 255\n",
+      "8 255\n",
+      "9 255\n",
+      "9 255\n",
+      "1 255\n",
+      "1 255\n",
+      "2 255\n",
+      "5 255\n",
+      "2 255\n",
+      "5 255\n",
+      "2 255\n",
+      "5 255\n",
+      "2 255\n",
+      "5 255\n",
+      "5 255\n"
+     ]
+    },
     {
      "data": {
       "text/plain": [
        "True"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "\n",
-    "\n",
     "skeleton = cv2.imread(\"3-skeletonized_roadmap.png\", cv2.IMREAD_GRAYSCALE)\n",
-    "# add padding to get nodes from the image borders which start from white\n",
     "image = cv2.imread(\"2.3-road_dil_bin.png\", cv2.IMREAD_GRAYSCALE)\n",
     "\n",
-    "skeleton = cv2.copyMakeBorder(\n",
-    "    skeleton, 10, 10, 10, 10, cv2.BORDER_CONSTANT, value=[0, 0, 0])\n",
-    "image = cv2.copyMakeBorder(image, 10, 10, 10, 10,\n",
+    "# add padding to get nodes from the image borders which start from white\n",
+    "# skeleton = cv2.copyMakeBorder(\n",
+    "#     skeleton, 1, 1, 1, 1, cv2.BORDER_CONSTANT, value=[0, 0, 0])\n",
+    "image = cv2.copyMakeBorder(image, 1, 1, 1, 1,\n",
     "                           cv2.BORDER_CONSTANT, value=[0, 0, 0])\n",
     "\n",
     "# detect nodes\n",
     "graph = zhang_suen_node_detection(skeleton)\n",
+    "\n",
     "# detect edges\n",
     "# graph = breadth_first_edge_detection(skeleton, gray_img, graph)\n",
-    "graph = breadth_first_edge_detection(skeleton, image, graph)\n",
+    "graph = breadth_first_edge_detection(skeleton, skeleton, graph)\n",
     "# skeleton = cv2.cvtColor(skeleton, cv2.COLOR_GRAY2BGR)\n",
     "\n",
-    "image = cv2.cvtColor(image, cv2.COLOR_GRAY2BGR)\n",
+    "image = cv2.cvtColor(skeleton, cv2.COLOR_GRAY2BGR)\n",
     "graph_img = draw_graph(image, graph)\n",
-    "cv2.imwrite(\"zgraph.png\", graph_img)\n",
-    "\n",
-    "\n",
-    "\n"
+    "cv2.imwrite(\"zgraph.png\", graph_img)\n"
    ]
   }
  ],
