--- a/.research-dump/preprocess-algo.ipynb
+++ b/.research-dump/preprocess-algo.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -11,7 +11,7 @@
        "True"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -23,7 +23,7 @@
     "import matplotlib.pyplot as plt\n",
     "\n",
     "# Load the Google Maps screenshot\n",
-    "image = cv2.imread(\"./0-road.png\")\n",
+    "image = cv2.imread(\"./0-test3.png\")\n",
     "\n",
     "# detect highway roads and display them in white color\n",
     "# take a HSV color space\n",
